--- a/views/blog.html
+++ b/views/blog.html
@@ -96,7 +96,7 @@
         <div class="blog-content">
           <div class="btn-group" style="display:flex;width: 100%; justify-content:flex-end;">
             <a href="#" class="btn-edit">Edit Post</a>
-            <form action="/delete-blog/{{$index}}" method="POST" style="margin-left:10px">
+            <form action="/blog-delete/{{$index}}" method="POST" style="margin-left:10px">
               <input type="submit" class="btn-post" value="Delete Blog" style="cursor:pointer">
             </form>
           </div>
